# rkfacial

./: CMakeLists.txt  aiq_control.cpp  aiq_control.h  camir_control.c  camrgb_control.c  database.c  database.h  db_monitor.cpp  db_monitor.h  display.c  display.h  face_common.h  face_config.c  face_config.h  play_wav.c  rga_control.c  rkcif_control.c  rkcif_control.h  rkdrm_display.c  rkfacial.c  rkfacial.h  rkisp_control.c  rkisp_control.h  rockface_control.cpp  rockface_control.h  snapshot.c  snapshot.h  usb_camera.c  video_common.c  video_common.h  vpu_decode.c  vpu_decode.h  vpu_encode.c
